src/test/deca/context/valid/operation-binaire-equals-int.deca
// Description:
//    operation binaire equals sur des int
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    1 == 1;
}